# Proyecto-MLOps

./: .gitignore  Makefile  README.md  config.env  docker-compose.yaml  main.ipynb  pyproject.toml  requ.txt
app/back-end/: Dockerfile  README.md  mlflow.db  server.py
app/back-end/modeling/: data_loading.py  evaluation.py  model_training.py  preprocess.py  schemas.py
app/back-end/modeling/data/: data.csv
app/back-end/requirements/: requirements.txt
app/front-end/: main.py
app/front-end/static/: index.html  model.html  search.html  train.html
app/front-end/static/css/: style.css
docs/: mkdocs.yml
docs/docs/: .$Architecture.drawio.bkp  Architecture.drawio  index.md
notebooks/1.EDA_Gender_Gap_in_Spanish_WP/: 1.EDA.ipynb
notebooks/2. EDA_IC_RL_Gender_Gap_in_Spanish/: 1.EDA_IC_RL.ipynb
notebooks/3.Synthetic_data_generation/: New_data.ipynb
notebooks/3.Synthetic_data_generation/data/: synthetic_faker_dataset_2024-10-20_20-13-33.csv  synthetic_interpolated_dataset.csv  synthetic_interpolated_dataset2024-10-20_20:00:36.csv  synthetic_interpolated_dataset2024-10-20_20:04:00.csv
refactoring/: data_loading.py  evaluation.py  main.py  mlflow_helper.py  preprocess.py  train.py
tests/integration/: test_api.py
tests/unit/: test_data_loading.py  test_evaluation.py  test_preprocess.py
wikipedia_genero_analisis/: Dockerfile  __init__.py  dataset.py  features.py  main.py  plots.py  requirements.txt
wikipedia_genero_analisis/modeling/: model_training.py  predict.py  preprocess.py  schemas.py  train.py
